[gd_scene load_steps=3 format=3 uid="uid://y8rsmyym2wmw"]

[ext_resource type="Script" path="res://Scripts/TemplatePrototypingTool.gd" id="1_dc62l"]

[sub_resource type="LabelSettings" id="LabelSettings_gg7mo"]
font_size = 22

[node name="TemplateTool" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_dc62l")

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Template string goes here"

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
label_settings = SubResource("LabelSettings_gg7mo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
label_settings = SubResource("LabelSettings_gg7mo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
label_settings = SubResource("LabelSettings_gg7mo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
label_settings = SubResource("LabelSettings_gg7mo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label5" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
label_settings = SubResource("LabelSettings_gg7mo")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="text_changed" from="CanvasLayer/VBoxContainer/TextEdit" to="CanvasLayer/VBoxContainer" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="CanvasLayer/VBoxContainer" method="_on_button_pressed"]
